# polaris

./: .gitignore  README.md  docker-compose.yml  index.html
.github/workflows/: deploy.yml
agents/rust_sys_monitor/: Cargo.toml
agents/rust_sys_monitor/src/: main.rs
assets/: index-BLb58DVm.css  index-CsTjSnSM.js  index-Gd189Qc7.js  index.es-C7H-HGe0.js  index.es-CeJGRQBB.js
backend/: requirements.txt
backend/api/: database.py  main.py  models.py  verify_retention.py
backend/workers/: kafka_consumer.py
frontend/: DEVELOPER_GUIDE.md  PHASE_2_ARCHITECTURE.md  PHASE_2_COMPLETION_REPORT.md  index.html  package-lock.json  package.json  tailwind.config.js  tsc_output.txt  tsc_output_utf8.txt  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: index.ts
frontend/src/components/auth/: Login.tsx
frontend/src/components/charts/: LiveTrafficChart.tsx  RiskDistribution.tsx  index.ts
frontend/src/components/feedback/: AlertCard.tsx  ThreatFeed.tsx  index.ts
frontend/src/components/layout/: ErrorBoundary.tsx  Header.tsx
frontend/src/components/metrics/: KpiCard.tsx  KpiGrid.tsx  LiveAttacks.tsx  SecurityStats.tsx  index.ts
frontend/src/hooks/: index.ts  useThreatSimulation.ts
frontend/src/types/: index.ts  interfaces.ts
frontend/src/utils/: formatters.ts  index.ts  reportGenerator.ts
