[package]
name = "rust_sys_monitor"
version = "0.1.0"
edition = "2021"
authors = ["Polaris Project"]
description = "Memory-safe system-level behavioral monitoring agent for POLARIS"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
rdkafka = { version = "0.34", features = ["cmake-build"] }
sysinfo = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.13"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.4", features = ["v4"] }
thiserror = "1.0"
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
